# liquid_lab_task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  settings.py
auxiliary/: stock_summary.py
clients/: api.py
database/: db.py
models/: alpha_response.py
routes/: stock_summary.py
