[project]
name = "liquid-labs"
version = "0.1.0"
description = "Task liquid lab flask API development"
authors = [
    {name = "Eranda Sanjaya",email = "76166067+ES-3508@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
